# stash

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README.adoc  README.md  TODO.txt  autogen.sh  config.h.in  configure.ac  rm-scripts.sh
src/: .gitignore  buffer.c  buffer.h  list.c  list.h  main.c  stash.c  stash.h  stash_file.c  stash_file.h  stash_log.c  stash_log.h  util.c  util.h
test/: buffer-1.c  mk-repo.sh  test-1.sh
